example/secondfile/objects/Apttus_Config2__ProductAttributeValue__c.object
<CustomObject>
    <fields>
        <fullName>Igloo_Supplier_Name_Contains__c</fullName>
        <formula>IGLOO_Supplier_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Igloo Supplier Name Contains</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iglow_Call_Date__c</fullName>
        <label>Iglow Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Option_AVPN__c</fullName>
        <inlineHelpText>Installation Option for AVPN</inlineHelpText>
        <label>Installation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Option_MIS__c</fullName>
        <inlineHelpText>Installation Option MIS</inlineHelpText>
        <label>Installation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tele Install</fullName>
                </value>
                <value>
                    <fullName>Onsite Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Catalog_Id__c</fullName>
        <label>Installation Catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Option_AVPN__c</fullName>
        <label>Installation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onsite Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Option_MIS__c</fullName>
        <label>Installation Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tele Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterfaceTypeASE__c</fullName>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PortSpeedASE__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>04LN9.1CT (100 Base T)</fullName>
                </value>
                <value>
                    <fullName>08LN9.1GE (1000 Base T)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A02 (1000 Base LX)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A03 (1000 Base ZX)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A04 (1000 Base SX)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A02 (10G Base LR SMF/10000 Base LX)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A03 (10G Base ER SMF/10000 Base ZX)</fullName>
                </value>
                <value>
                    <fullName>02LNF.A04 (10G Base SR MMF/10000 Base SX)</fullName>
                </value>
                <value>
                    <fullName>Elec-100 BASE T- 04LN9.1CT</fullName>
                    <isActive>false</isActive>
                    <label>Elec-100 BASE T- 04LN9.1CT</label>
                </value>
                <value>
                    <fullName>Elec-1000 BASE T- 08LN9.1GE</fullName>
                    <isActive>false</isActive>
                    <label>Elec-1000 BASE T- 08LN9.1GE</label>
                </value>
                <value>
                    <fullName>Opt-1000 BASE LX SMF- 02LNF.A02</fullName>
                    <isActive>false</isActive>
                    <label>Opt-1000 BASE LX SMF- 02LNF.A02</label>
                </value>
                <value>
                    <fullName>Opt-1000 BASE SX MMF- 02LNF.A04</fullName>
                    <isActive>false</isActive>
                    <label>Opt-1000 BASE SX MMF- 02LNF.A04</label>
                </value>
                <value>
                    <fullName>Opt-10G BASE ER SMF (10000 BASE LX/LH) 02.LNF.A03</fullName>
                    <isActive>false</isActive>
                    <label>Opt-10G BASE ER SMF (10000 BASE LX/LH) 02.LNF.A03</label>
                </value>
                <value>
                    <fullName>Opt-10G BASE LR SMF (10000 BASE ZX)- 02LNF.A02</fullName>
                    <isActive>false</isActive>
                    <label>Opt-10G BASE LR SMF (10000 BASE ZX)- 02LNF.A02</label>
                </value>
                <value>
                    <fullName>Opt-10G BASE SR MMF (10000 BASE SX) 02LNF.A04</fullName>
                    <isActive>false</isActive>
                    <label>Opt-10G BASE SR MMF (10000 BASE SX) 02LNF.A04</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_Type_AVPN__c</fullName>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Access_Speed_AVPN__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical - 100 Base TX</fullName>
                </value>
                <value>
                    <fullName>Optical Single Mode - 1000 Base LX</fullName>
                </value>
                <value>
                    <fullName>Optical Multi Mode - 1000 Base SX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_Type_MIS__c</fullName>
        <inlineHelpText>Interface for MIS</inlineHelpText>
        <label>Interface Type [DO NOT USE]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical - 100 Base TX</fullName>
                </value>
                <value>
                    <fullName>Optical Single Mode - 1000 Base LX</fullName>
                </value>
                <value>
                    <fullName>Optical Multi Mode - 1000 Base SX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interface_Type__c</fullName>
        <inlineHelpText>Interface Type MIS</inlineHelpText>
        <label>Interface Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Access_Speed_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical - 100 Base TX</fullName>
                </value>
                <value>
                    <fullName>Optical Single Mode - 1000 Base LX</fullName>
                </value>
                <value>
                    <fullName>Optical Multi Mode - 1000 Base SX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPromotional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will capture if the Rate needs to be applied is Promotional or non Promotional</description>
        <label>Is Promotional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LATA_Number__c</fullName>
        <label>LATA Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LATA__c</fullName>
        <label>LATA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inter LATA</fullName>
                </value>
                <value>
                    <fullName>Intra LATA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__LineNumber__c</formula>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MAC_AddressesASE__c</fullName>
        <label>MAC Addresses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>251 - 500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Router__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Managed Router (MIS Plus)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MileageAbove20__c</fullName>
        <formula>IF(Mileage__c&gt;20, Mileage__c-20, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileageAbove20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MileageAbove50__c</fullName>
        <formula>IF(Mileage__c&gt;50, Mileage__c-50, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MileageAbove50</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_TypeASE__c</fullName>
        <label>Network Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single End Customer</fullName>
                </value>
                <value>
                    <fullName>Multi End Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Local_Phone_Numbers__c</fullName>
        <label>How many New Local Phone Numbers?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Virtual_Phone_Numbers__c</fullName>
        <label>How many New Virtual Phone Numbers?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Class_of_Service__c</fullName>
        <label>Old Class of Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Committed_Information_Rate_Price__c</fullName>
        <label>Old Committed Information Rate Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Committed_Information_Rate__c</fullName>
        <label>Old Committed Information Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Interface_Type__c</fullName>
        <label>Old Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_MAC_Addresses__c</fullName>
        <label>Old MAC Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_NC_Code__c</fullName>
        <label>Old NC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_SPEC_Code__c</fullName>
        <label>Old SPEC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPCoS_Suffix__c</fullName>
        <label>PPCoS Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_1_Local_Protection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy 1: Local Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_2_Remote_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Policy 2: Remote Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PortSpeedASE__c</fullName>
        <description>Field to capture value for Port Speed</description>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ServiceType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100 Mbps Port</fullName>
                </value>
                <value>
                    <fullName>1 Gbps Port</fullName>
                </value>
                <value>
                    <fullName>10 Gbps Port</fullName>
                </value>
                <value>
                    <fullName>100Gbps</fullName>
                    <isActive>false</isActive>
                    <label>100Gbps</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_BEID__c</fullName>
        <label>Port BEID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Catalog_Id__c</fullName>
        <label>Port Catalog Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed_AIA__c</fullName>
        <label>Port Speed AIA</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region_AIA__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>25 Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>25s Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>50 Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>50s Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>100 Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>100s Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>200 Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>200s Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>300 Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>300s Mbps (Business Fiber)</fullName>
                </value>
                <value>
                    <fullName>768 Kbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>1.5 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>3 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>6 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>12 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>18 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>24 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>45 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>75 Mbps (Broadband)</fullName>
                </value>
                <value>
                    <fullName>1.1 Mbps (SDSL)</fullName>
                </value>
                <value>
                    <fullName>1.5 Mbps (SDSL)</fullName>
                </value>
                <value>
                    <fullName>768 Kbps (ADSL)</fullName>
                </value>
                <value>
                    <fullName>1.5 Mbps (ADSL)</fullName>
                </value>
                <value>
                    <fullName>3 Mbps (ADSL)</fullName>
                </value>
                <value>
                    <fullName>6 Mbps (ADSL)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed_AVPN__c</fullName>
        <inlineHelpText>Port Speed AVPN</inlineHelpText>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Type_AVPN__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3.088 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.632 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6.176 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.720 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9.264 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.808 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12.352 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed_Generic__c</fullName>
        <formula>IF(ProductName__c == &apos;AVPN&apos;, 
IF(Hi_Cap_Flex__c == true, TEXT(UBB_Speed_AVPN__c), TEXT(Port_Speed_AVPN__c)), 
IF(ProductName__c == &apos;MIS&apos;||ProductName__c == &apos;AMIS&apos;, 
IF(Hi_Cap_Flex__c == true, TEXT(UBB_Speed_MIS__c),TEXT(Port_Speed_MIS__c)), 
IF(ProductName__c == &apos;ASE&apos;,TEXT(PortSpeedASE__c), 
IF(ProductName__c == &apos;AIA&apos;,TEXT(Port_Speed_AIA__c),&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Port Speed (Generic)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Speed_MIS__c</fullName>
        <description>Port speed MIS</description>
        <label>Port Speed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Type_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>T1 (1.544 Mbps)</fullName>
                </value>
                <value>
                    <fullName>2xT1 (3 Mbps)</fullName>
                </value>
                <value>
                    <fullName>3xT1 (4.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>4xT1 (6 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5xT1 (7.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>6xT1 (9 Mbps)</fullName>
                </value>
                <value>
                    <fullName>7xT1 (10.5 Mbps)</fullName>
                </value>
                <value>
                    <fullName>8xT1 (12 Mbps)</fullName>
                </value>
                <value>
                    <fullName>5 Mbps</fullName>
                </value>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
                <value>
                    <fullName>1000 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Speed__c</fullName>
        <label>Port Speed</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Type_AVPN__c</fullName>
        <inlineHelpText>Port Type AVPN</inlineHelpText>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>VLANs_Logical_Channels__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_Type_MIS__c</fullName>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Line</fullName>
                </value>
                <value>
                    <fullName>Switched Ethernet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Port_VLAN_BasedASE__c</fullName>
        <label>Port/VLAN Based</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Port Based</fullName>
                </value>
                <value>
                    <fullName>VLAN Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ported_Phone_Numbers__c</fullName>
        <label>How many Ported Phone Numbers?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Apttus_Config2__LineItemId__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <description>This is to get the proposal Name</description>
        <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__Proposal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Id</formula>
        <label>QuoteId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Total_Failure_Count__c</fullName>
        <formula>Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.RetrialFailure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Total Failure Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region_AIA__c</fullName>
        <description>Each site address IWSA call will indicate the site as being in-region or out-of-region. The resultant value is store in this field. This value is never set or visible to the Service Provider.</description>
        <label>Region_AIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Region</fullName>
                </value>
                <value>
                    <fullName>Out of Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SPEC_Code_2__c</fullName>
        <formula>IF( 
AND( 
ISPICKVAL(ServiceType__c, &apos;ASE Basic&apos;), 
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;PPCoS&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Multimedia High&apos;), 
ISPICKVAL(MAC_AddressesASE__c,&apos;251 - 500&apos;) 
) 
,&apos;OEMAP2&apos;,IF( 
AND( 
ISPICKVAL(ServiceType__c, &apos;ASE Broadband&apos;), 
ISPICKVAL(Class_of_Service_TypeASE__c,&apos;Basic&apos;), 
ISPICKVAL(Class_of_ServiceASE__c,&apos;Broadband Basic&apos;), 
ISPICKVAL(MAC_AddressesASE__c,&apos;64&apos;) 
) 
,&apos;OEMBB1&apos;,&apos;&apos;))</formula>
        <label>SPEC Code 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>This Field is used for capturing the service type if its Basic or Broadband
Help Text</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASE Basic</fullName>
                </value>
                <value>
                    <fullName>ASE Broadband</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                    <isActive>false</isActive>
                    <label>Basic</label>
                </value>
                <value>
                    <fullName>Broadband</fullName>
                    <isActive>false</isActive>
                    <label>Broadband</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Setup_Fee__c</fullName>
        <label>Set-up Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteID__c</fullName>
        <label>SiteID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_DesignationASE__c</fullName>
        <label>Site Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hub</fullName>
                </value>
                <value>
                    <fullName>Spoke</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_1_Suffix__c</fullName>
        <label>Tier 1 Suffix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_Suffix__c</fullName>
        <label>Tier 2 Suffix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_3_Suffix__c</fullName>
        <label>Tier 3 Suffix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traffic_Jurisdiction__c</fullName>
        <label>Traffic Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interstate</fullName>
                </value>
                <value>
                    <fullName>Intrastate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBB_Speed_AVPN__c</fullName>
        <description>Minimum Bandwidth Commitment for AVPN</description>
        <label>Minimum Bandwidth Commitment (MBC)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed_AVPN__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBB_Speed_MIS__c</fullName>
        <description>Minimum Bandwidth Commitment for MIS</description>
        <label>Minimum Bandwidth Commitment (MBC)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Port_Speed_MIS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>10 Mbps</fullName>
                </value>
                <value>
                    <fullName>20 Mbps</fullName>
                </value>
                <value>
                    <fullName>50 Mbps</fullName>
                </value>
                <value>
                    <fullName>100 Mbps</fullName>
                </value>
                <value>
                    <fullName>250 Mbps</fullName>
                </value>
                <value>
                    <fullName>500 Mbps</fullName>
                </value>
                <value>
                    <fullName>600 Mbps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UBB_Speed__c</fullName>
        <label>UBB Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VASA_Region__c</fullName>
        <description>This is the VASA Region as returned by the VASA call (service availability).  It is set prior to arriving at the product configuration page.</description>
        <label>VASA Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Region</fullName>
                </value>
                <value>
                    <fullName>OO1</fullName>
                </value>
                <value>
                    <fullName>OO1A</fullName>
                </value>
                <value>
                    <fullName>OO2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VLANs_Logical_Channels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VLANs/ Logical Channels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wireline_Promotion_Id__c</fullName>
        <label>Wireline_Promotion Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cartId__c</fullName>
        <formula>CASESAFEID( Apttus_Config2__LineItemId__r.Apttus_Config2__ConfigurationId__c )</formula>
        <label>cartId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enhanced_features__c</fullName>
        <label>Select Enhanced Features</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Features</fullName>
                </value>
                <value>
                    <fullName>Trunk Call Routing</fullName>
                </value>
                <value>
                    <fullName>Both (Line Features &amp; Trunk Call Routing)</fullName>
                </value>
                <value>
                    <fullName>Feature not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>